# agent-learn

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
agentlearn/: __init__.py  cli.py  engine.py  evaluator.py  models.py
agentlearn/analyzers/: base.py  batch_analyzer.py  conflict_detector.py  llm_analyzer.py  tiered.py
agentlearn/injector/: base.py  canary.py  embedding.py  hybrid.py  simple.py  smart.py
agentlearn/signals/: base.py  composite.py  deterministic.py  llm_judge.py
agentlearn/store/: base.py  local_store.py  snapshots.py
agentlearn/tracers/: base.py  generic_llm.py
agentlearn/utils/: budget.py  cost_tracker.py  embeddings.py  llm.py  logging.py  safety.py  scoring.py
agentlearn/validators/: base.py  human_validator.py  statistical.py
examples/: basic_agent.py
tests/: conftest.py  test_engine.py  test_evaluator.py  test_models.py  test_phase2.py  test_phase3.py  test_store.py
