[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlearn"
version = "0.1.0"
description = "A recursive learning framework that gives any AI agent a self-improvement loop with memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "numpy>=1.24",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
agentlearn = "agentlearn.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
